--- a/MasterManager-war/web/templates/skeleton.xhtml
+++ b/MasterManager-war/web/templates/skeleton.xhtml
@@ -20,6 +20,10 @@
             </ui:insert>
         </div>
         <h:outputScript library="js"
+                        name="jquery-3.2.1.js"></h:outputScript>
+        <h:outputScript library="js"
+                        name="popper.js"></h:outputScript>
+        <h:outputScript library="js"
                         name="bootstrap.min.js"></h:outputScript>
         <ui:insert name="scripts">
             <!-- other scripts you might want to include -->
