--- a/MasterManager-war/web/templates/skeleton.xhtml
+++ b/MasterManager-war/web/templates/skeleton.xhtml
@@ -6,8 +6,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title><ui:insert name="title">Academics
-                Management</ui:insert></title>
+        <title><ui:insert name="title">Master Management</ui:insert></title>
         <h:outputStylesheet library="css" name="bootstrap.min.css"/>
         <ui:insert name="css">
             <!-- other style sheets you might want to include -->
